--- a/pandas.html
+++ b/pandas.html
@@ -4,6 +4,6 @@
 	<h1> PANDAS! </h1>
 	<br/>
 	<p> Pandas are so cute! </p>
-	<p> im gay </p>
+	<p>  In the wild, they are found in thick bamboo forests, high up in the mountains of central China  </p>
 </body>
 </html>
